@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2022 the original author or authors.
+ * Copyright 2012-2019 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,7 +16,9 @@
 
 package org.springframework.boot.actuate.endpoint;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 import org.springframework.util.Assert;
@@ -32,9 +34,9 @@ public abstract class AbstractExposableEndpoint<O extends Operation> implements 
 
 	private final EndpointId id;
 
-	private final boolean enabledByDefault;
+	private boolean enabledByDefault;
 
-	private final List<O> operations;
+	private List<O> operations;
 
 	/**
 	 * Create a new {@link AbstractExposableEndpoint} instance.
@@ -47,7 +49,7 @@ public abstract class AbstractExposableEndpoint<O extends Operation> implements 
 		Assert.notNull(operations, "Operations must not be null");
 		this.id = id;
 		this.enabledByDefault = enabledByDefault;
-		this.operations = List.copyOf(operations);
+		this.operations = Collections.unmodifiableList(new ArrayList<>(operations));
 	}
 
 	@Override
